styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  .text-shadow {
    text-shadow: 2px 2px 0 rgba(68, 68, 68, 1);
  }
}

@layer base {
  body {
    @apply bg-purple-75;
  }

  html,
  body,
  body > div:first-child {
    @apply h-full;
  }

  img {
    image-rendering: -webkit-optimize-contrast;
    image-rendering: -moz-crisp-edges;
    image-rendering: -o-crisp-edges;
    image-rendering: crisp-edges;
  }
}

